engageai.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment-dev
  namespace: engage # Specify the namespace here
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: sathish8329/engagestage:v1.0.4
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: pirapp-frontend-service-dev
  namespace: engage  # Specify the namespace here
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: NodePort
